# DiffusionMRI

./: DWIPreprocess.sh  DiffusionProcessing.sh  MRTrixACT_Connectome.sh  MRTrixTractography.sh  README.md  aseg.stats  diffusion_preprocessing  diffusion_preprocessing.py  diffusion_preprocessing_functions.py  dti.py  free_surfer_stats_csv.py  map.py  microstructure_processing  microstructure_processing.py  neuro  neuro_processing.def  roi_analysis  roi_functions.py  util.py
DifSim/: .gitignore  CMakeLists.txt  ConfigFile.cc  VectorPotential.h  difsim_kernel.cc  gtb_histogram.cc  mcell_configure.sh  small_test.cc  sphtes.cc
DifSim/DifSimGui/: cube.stl  cylinders.stl  dsgui.py  mpl_figure_editor.py  sinusoidal_stimulus.txt
DifSim/DifSimGui/blender_plugin/: __init__.py  difsimgui.py  save_nifti.py
DifSim/DifSimGui/bloch/: Makefile-old  alloc.c  alloc.h  alm.c  alm.h  bloch.c  bloch.h  coords.c  coords.h  cs_qhull.c  excite.c  excite.h  genmb.c  genmb.h  grads.h  gsl_utils.c  gsl_utils.h  ioutils.c  ioutils.h  lrf_utils.py  matrix.c  matrix.h  msrf2_sinc.rho  msrf2_sinc.theta  msrf2_slr.rho  msrf2_slr1600.rho  msrf2_slr3200.rho  msrf2_slr3200_64ms.rho  plot_bloch.py  rand.c  rand.h  rf_interp.nb  rfse1b4.rho  rotations.c  rotations.h  slr180.rho  sphfun.c  sphfun.h  sphtes.c  sphtes.h  (+4 more)
DifSim/DifSimGui/bloch/ecw/: bloch2.c  bloch2.mexglx  bloch2.mexmaci  bloch2.mexmaci64  blok.m
DifSim/doc/: DifSim-HOWTO
DifSim/include/: colordefs.h  coords.h  cs.h  difsim.h  grads.h  gtb_histogram.h  sph_particle.h  sph_particle_list.h  sph_particle_octree.h  sphtes.h
DifSim/mcell-3/: .gitignore  Makefile.am  configure.ac  diffuse.c  diffuse.h  grid_util.c  mcell_structs.h  mcell_wrap.c  mcell_wrap.h  mdllex.l  mdlparse.y  mdlparse_aux.h  mdlparse_util.c  mdlparse_util.h  react_outc.c  sym_table.c  util.h  viz_output.c  vol_util.c
DifSim/test/: cylinder_test.py
DifSim/utilities/: AnalyzeSignal.pl  RunSeries.pl  complex-signal-magnitude.py  cylinder-8.mdl  cylinder.py  generate-3m-dpfg-spacing-simulations.py  generate-cc-simulations.py  generate-cc-sweep-simulations-bg.py  generate-cc-sweep-simulations.py  generate-cylinder.py  generate-dpfg-angle-simulations.py  generate-dpfg-simulations.py  generate-dpfg-spacing-simulations.py  generate-dpfg-tensor-file.pl  generate-sc-nonperiodic-alt-simulations.py  generate-sc-nonperiodic-simulations.py  generate-sc-nonperiodic-tests.py  generate-sc-simulations-bg.py  generate-sc-simulations.py  generate-simulations.py  place-cylinder.py  single-cylinder.mdl  single-cylinder.vtk
amico/: util.py
source/: MRTrixACT_Connectome  bruker2nifti  create_direction_set  diffusion_preprocessing  microstructure_processing  roi_analysis  roi_tractography  tract_profiles
source/Atlases/: ICBM_82_LUT.txt  WHS_SD_rat_atlas_v2.label
source/config/: FreeSurferColorLUT.txt  ICBM_82_LUT.txt  WHS_SD_rat_atlas_v2.label  fs_a2009_roi.txt  fs_a2009s.txt  fs_default.txt  fs_default_gm.txt  fs_default_wm.txt
source/diffusion_functions/: Untitled.ipynb  connectome_functions.py  create_diffusion_directions.py  diffusion_preprocessing_functions.py  dki.py  dti.py  free_surfer_stats_csv.py  gqi.py  lpca_denoising.py  map.py  qbi.py  roi_functions.py  spherical_harmonics.py  util.py
source/diffusion_functions/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
source/diffusion_functions/amico/: __init__.py  core.py  lut.py  models.py
source/direction_files_qsi/: 100_dirs.txt  162faces.txt  162vertices.txt  200_dirs.txt  2562faces.txt  2562vertices.txt  300_dirs.txt  42faces.txt  42vertices.txt  642faces.txt  642vertices.txt
source/io_functions/: Untitled.ipynb  bruker_converter.py  file_finder.py
source/io_functions/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
